# Game32

./: CMakeLists.txt  README.md
Dependencies/Glad/: glad.c
Dependencies/Glad/glad/: glad.h
cuild/: .nfs000000025db3de82000000a7  CMakeCache.txt  Game32  Makefile  cmake_install.cmake
src/: main.cpp
src/Core/: Application.cpp  Application.h  Input.h
src/Render/: DataTypes.cpp  DataTypes.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/Scene/: BossHPPanel.cpp  BossHPPanel.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneData.h
src/core/: Application.cpp  Application.h  Input.cpp  Input.h
